--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>martPlase</title>
+    <link rel="shortcut icon" type="img/favicon.ico" href="http://martPlase.com/favicon.ico">
     <link rel="stylesheet" href="css/_libs.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -323,12 +324,6 @@
                             <li class="newest__filter">fourth</li>
                             <li class="newest__filter">fifth</li>
                         </ul>
-
-                        <div class="newest__filter-dots">
-                            <div class="newest__filter-dot"></div>
-                            <div class="newest__filter-dot"></div>
-                            <div class="newest__filter-dot"></div>
-                        </div>
                     </div>
                 </div>
                 <div class="newest__tags">
@@ -383,8 +378,6 @@
                             </div>
                             <span class="info__span">246</span>
                         </div>
-
-
                     </div>
 
                     <div class="newest__card card mix category-psd-template" data-order="2">
@@ -425,8 +418,6 @@
                             </div>
                             <span class="info__span">246</span>
                         </div>
-
-
                     </div>
 
                     <div class="newest__card card mix category-site-template" data-order="3">
@@ -509,8 +500,6 @@
                             </div>
                             <span class="info__span">246</span>
                         </div>
-
-
                     </div>
 
                     <div class="newest__card card mix category-wordpress" data-order="5">
@@ -551,8 +540,6 @@
                             </div>
                             <span class="info__span">246</span>
                         </div>
-
-
                     </div>
 
                     <div class="newest__card card mix category-psd-template" data-order="6">
@@ -593,8 +580,6 @@
                             </div>
                             <span class="info__span">246</span>
                         </div>
-
-
                     </div>
                 </div>
                 <button class="newest__tag newest__tag-bottom" type="button" data-filter="all">All New Products</button>
@@ -609,8 +594,6 @@
                 <div class="followers__title title">
                     Your Followers Feed
                 </div>
-
-
                 <div class="followers-slider__inner">
 
                     <div class="followers-slider__card card">
@@ -624,8 +607,6 @@
 
                             <img class="img" src="img/ducks-bg.jpg" alt="">
                         </a>
-
-
                         <div class="content">
                             <div class="content__title">
                                 E-commerce Shopping Cart
@@ -651,10 +632,7 @@
                             </div>
                             <span class="info__span">246</span>
                         </div>
-
-
                     </div>
-
                     <div class="followers-slider__card card">
                         <a class="card__link" href="#">
                             <a href="#" class="more">
@@ -666,8 +644,6 @@
 
                             <img class="img" src="img/ducks-bg.jpg" alt="">
                         </a>
-
-
                         <div class="content">
                             <div class="content__title">
                                 E-commerce Shopping Cart
@@ -693,10 +669,7 @@
                             </div>
                             <span class="info__span">246</span>
                         </div>
-
-
                     </div>
-
                     <div class="followers-slider__card card">
                         <a class="card__link" href="#">
                             <a href="#" class="more">
@@ -708,8 +681,6 @@
 
                             <img class="img" src="img/ducks-bg.jpg" alt="">
                         </a>
-
-
                         <div class="content">
                             <div class="content__title">
                                 E-commerce Shopping Cart
@@ -735,10 +706,7 @@
                             </div>
                             <span class="info__span">246</span>
                         </div>
-
-
                     </div>
-
                     <div class="followers-slider__card card">
                         <a class="card__link" href="#">
                             <a href="#" class="more">
@@ -750,8 +718,6 @@
 
                             <img class="img" src="img/ducks-bg.jpg" alt="">
                         </a>
-
-
                         <div class="content">
                             <div class="content__title">
                                 E-commerce Shopping Cart
@@ -777,15 +743,9 @@
                             </div>
                             <span class="info__span">246</span>
                         </div>
-
-
                     </div>
-
-
                 </div>
-
             </div>
-
         </div>
     </section>
 
@@ -994,21 +954,278 @@
             </div>
         </div>
     </section>
-    <section class="news"></section>
+    <section class="news">
+        <div class="container">
+            <div class="news__inner">
+                <div class="news__title">Latest <span>News</span></div>
+                <div class="news__text">
+                    Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores
+                    nemis omnis fugats. Lid est laborum dolo rumes fugats untras.
+                </div>
 
+                <div class="news__items">
+                    <div class="news__item">
 
+                        <div class="news__content">
+                            <a href="#">
+                                <img class="news__img" src="img/ducks-bg.jpg" alt="">
+                            </a>
+                            <div class="news__content-box">
+                                <div class="news__content-title">
+                                    Web Design Trends in 2017
+                                </div>
+                                <div class="news__content-text">
+                                    Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                    the mattis, leo quam aliquet congue.
+                                </div>
+                            </div>
+                            <div class="news__content-info">
+                                <div class="news__content-time">
+                                    24 Feb 2017
+                                </div>
+                                <div class="news__content-comments">
+                                    45
+                                </div>
+                                <div class="news__content-watch">
+                                    345
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
+                    <div class="news__item">
 
+                        <div class="news__content">
+                            <a href="">
+                                <img class="news__img" src="img/ducks-bg.jpg" alt="">
+                            </a>
+                            <div class="news__content-box">
+                                <div class="news__content-title">
+                                    Web Design Trends in 2017
+                                </div>
+                                <div class="news__content-text">
+                                    Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                    the mattis, leo quam aliquet congue.
+                                </div>
+                            </div>
+                            <div class="news__content-info">
+                                <div class="news__content-time">
+                                    24 Feb 2017
+                                </div>
+                                <div class="news__content-comments">
+                                    45
+                                </div>
+                                <div class="news__content-watch">
+                                    345
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
+                    <div class="news__item">
 
+                        <div class="news__content">
+                            <a href="">
+                                <img class="news__img" src="img/ducks-bg.jpg" alt="">
+                            </a>
+                            <div class="news__content-box">
+                                <div class="news__content-title">
+                                    Web Design Trends in 2017
+                                </div>
+                                <div class="news__content-text">
+                                    Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                                    the mattis, leo quam aliquet congue.
+                                </div>
+                            </div>
+                            <div class="news__content-info">
+                                <div class="news__content-time">
+                                    24 Feb 2017
+                                </div>
+                                <div class="news__content-comments">
+                                    45
+                                </div>
+                                <div class="news__content-watch">
+                                    345
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="guarantee">
+        <div class="container">
+            <div class="guarantee__inner">
+                <div class="guarantee__item">
+                    <img class="guarantee__img" src="img/money.png" alt="">
+                    <div class="guarantee__text">
+                        30 Days Money Back
+                        <span class="guarantee__text-blue">
+                            Guarantee
+                        </span>
+                    </div>
+                </div>
+                <div class="guarantee__item">
+                    <img class="guarantee__img" src="img/support.png" alt="">
+                    <div class="guarantee__text">
+                        Fast and Friendly
+                        <span class=" guarantee__text-purple">
+                            Support
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+    </section>
+    <section class="join" style="background-image: url(img/join-bg.jpg);">
+        <div class="container">
+            <div class="join__inner">
+                <div class="join__title">
+                    Ready to Join Our Marketplace!
+                </div>
+                <div class="join__text">
+                    Over 25,000 designers and developers trust the MartPlace.
+                </div>
+                <a class="join__link" href="#">
+                    Join Us Today
+                </a>
+            </div>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__inner">
+                <div class="footer__item-first">
+                    <img class="footer__logo" src="img/footer-logo.png" alt="">
+                    <div class="footer__text">
+                        Nunc placerat mi id nisi interdum they mollis. Praesent pharetra, justo ut
+                        scel erisque the mattis, leo quam.
+                    </div>
+                    <a class="footer__phone" href="​tel:67898752235">Phone: +6789-875-2235</a>
+                    <a class="footer__email" id="email" type="email"
+                        href="​mailto:support@aazztech.com">support@aazztech.com</a>
+                    <div class="footer__address">
+                        202 New Hampshire Avenue
+                        Northwest #100, New York-2573
+                    </div>
+                </div>
+                <div class="footer__item-second">
+                    <div class="footer__title">Our Company</div>
+                    <ul class="footer__list">
+                        <li class="footer__item">
+                            <a href="#">
+                                About Us
+                            </a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#">
+                                How It Work
+                            </a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#">
+                                Affiliates
+                            </a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#">
+                                Testimonials
+                            </a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#">
+                                Contact Us
+                            </a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#">
+                                Copyright Notice
+                            </a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#">
+                                Blog
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__item-third">
+                    <div class="footer__title">Help Support</div>
+                    <ul class="footer__list">
+                        <li class="footer__item">
+                            <a href="#">
+                                Support Forum
+                            </a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#">
+                                Terms & Conditions
+                            </a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#">
+                                Support Policy
+                            </a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#">
+                                Refund Policy
+                            </a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#">
+                                FAQs
+                            </a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#">
+                                Buyers Faq
+                            </a>
+                        </li>
+                        <li class="footer__item">
+                            <a href="#">
+                                Sellers Faq
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__item-fourth">
+                    <div class="footer__title">Newsletter</div>
+                    <div class="footer__text">
+                        Subscribe to get the latest news, update and offer information. Don't worry, we won't send spam!
+                    </div>
+                    <div class="footer__form-wraper">
+                        <form class="footer__form">
+                            <input class="footer__form-input" type="text" placeholder="E-mail Address">
+                            <button class="footer__form-btn" type="submit">submit</button>
+                        </form>
+                    </div>
+                    <div class="footer__social">
+                        <a href="#" class="footer__social-btn footer__social-btn-fb"></a>
+                        <a href="#" class="footer__social-btn footer__social-btn-tw"></a>
+                        <a href="#" class="footer__social-btn footer__social-btn-google"></a>
+                        <a href="#" class="footer__social-btn footer__social-btn-pn"></a>
+                        <a href="#" class="footer__social-btn footer__social-btn-in"></a>
+                        <a href="#" class="footer__social-btn footer__social-btn-dr"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="footer__copy">
+            ©2017
+            <span>
+                MartPlace.
+            </span>
+            All rights reserved. Created by
+            <span>
+                AazzTech
+            </span>
+        </div>
 
+    </footer>
 
-
-
-
-
-    
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
     <script src="js/main.js"></script>
