--- a/app/index.html
+++ b/app/index.html
@@ -242,8 +242,9 @@
                                             <a class="products__slider-price" href="#">
                                                 $10-$50
                                             </a>
-                                            <a class="products__slider-heart" href="">46</a>
-
+                                            <a class="products__slider-heart" href="">
+                                                46
+                                            </a>
                                             <a class="products__slider-cart" href="#">
                                                 634
                                             </a>
@@ -450,7 +451,7 @@
                             </div>
                             <div class="newest__inner-box">
 
-                                <div class="newest__card card mix category-wordpress" data-order="1">
+                                <article class="newest__card card mix category-wordpress" data-order="1">
                                     <a class="newest__card-link card__link" href="#">
                                         <a href="#" class="newest__card-more card__link-more">
                                             More Info
@@ -491,9 +492,9 @@
                                         </div>
                                         <a class="newest__card-info-cart card__info-cart href=" #">246</a>
                                     </div>
-                                </div>
+                                </article>
 
-                                <div class="newest__card card mix category-psd-template" data-order="2">
+                                <article  class="newest__card card mix category-psd-template" data-order="2">
                                     <a class="newest__card-link card__link" href="#">
                                         <a href="#" class="newest__card-more card__link-more">
                                             More Info
@@ -534,9 +535,9 @@
                                         </div>
                                         <a class="newest__card-info-cart card__info-cart" href=" #">246</a>
                                     </div>
-                                </div>
+                                </article >
 
-                                <div class="newest__card card mix category-site-template" data-order="3">
+                                <article  class="newest__card card mix category-site-template" data-order="3">
                                     <a class="newest__card-link card__link" href="#">
                                         <a href="#" class="newest__card-more card__link-more">
                                             More Info
@@ -579,9 +580,9 @@
                                     </div>
 
 
-                                </div>
+                                </article >
 
-                                <div class="newest__card card mix category-site-template" data-order="4">
+                                <article  class="newest__card card mix category-site-template" data-order="4">
                                     <a class="newest__card-link card__link" href="#">
                                         <a href="#" class="newest__card-more card__link-more">
                                             More Info
@@ -622,9 +623,9 @@
                                         </div>
                                         <a class="newest__card-info-cart card__info-cart" href=" #">246</a>
                                     </div>
-                                </div>
+                                </article >
 
-                                <div class="newest__card card mix category-wordpress" data-order="5">
+                                <article  class="newest__card card mix category-wordpress" data-order="5">
                                     <a class="newest__card-link card__link" href="#">
                                         <a href="#" class="newest__card-more card__link-more">
                                             More Info
@@ -665,9 +666,9 @@
                                         </div>
                                         <a class="newest__card-info-cart card__info-cart" href=" #">246</a>
                                     </div>
-                                </div>
+                                </article >
 
-                                <div class="newest__card card mix category-psd-template" data-order="6">
+                                <article  class="newest__card card mix category-psd-template" data-order="6">
                                     <a class="newest__card-link card__link" href="#">
                                         <a href="#" class="newest__card-more card__link-more">
                                             More Info
@@ -708,13 +709,15 @@
                                         </div>
                                         <a class="newest__card-info-cart card__info-cart" href=" #">246</a>
                                     </div>
-                                </div>
+                                </article >
+
+                            </div>    
                                 <a class="newest__tag newest__tag-bottom" href="#">
                                     All New
                                     Products
                                 </a>
 
-                            </div>
+                            
                         </div>
                 </section>
 
@@ -727,7 +730,7 @@
                             </div>
                             <div class="followers__slider-inner">
 
-                                <div class="followers__slider-card card">
+                                <article  class="followers__slider-card card">
                                     <a class="followers__slider-card-link card__link" href="#">
                                         <a href="#" class="followers__slider-card-more card__link-more">
                                             More Info
@@ -768,9 +771,9 @@
                                         </div>
                                         <a class="followers__slider-card-info-cart card__info-cart" href="#">246</a>
                                     </div>
-                                </div>
+                                </article >
 
-                                <div class="followers__slider-card card">
+                                <article  class="followers__slider-card card">
                                     <a class="followers__slider-card-link card__link" href="#">
                                         <a href="#" class="followers__slider-card-more card__link-more">
                                             More Info
@@ -811,9 +814,9 @@
                                         </div>
                                         <a class="followers__slider-card-info-cart card__info-cart" href="#">246</a>
                                     </div>
-                                </div>
+                                </article >
 
-                                <div class="followers__slider-card card">
+                                <article  class="followers__slider-card card">
                                     <a class="followers__slider-card-link card__link" href="#">
                                         <a href="#" class="followers__slider-card-more card__link-more">
                                             More Info
@@ -854,9 +857,9 @@
                                         </div>
                                         <a class="followers__slider-card-info-cart card__info-cart" href="#">246</a>
                                     </div>
-                                </div>
+                                </article >
 
-                                <div class="followers__slider-card card">
+                                <article  class="followers__slider-card card">
                                     <a class="followers__slider-card-link card__link" href="#">
                                         <a href="#" class="followers__slider-card-more card__link-more">
                                             More Info
@@ -897,7 +900,7 @@
                                         </div>
                                         <a class="followers__slider-card-info-cart card__info-cart" href="#">246</a>
                                     </div>
-                                </div>
+                                </article >
 
                             </div>
                         </div>
@@ -1140,7 +1143,7 @@
                             </div>
 
                             <div class="news__items">
-                                <div class="news__item">
+                                <article  class="news__item">
 
                                     <div class="news__content">
                                         <a href="#">
@@ -1157,20 +1160,20 @@
                                             </div>
                                         </div>
                                         <div class="news__content-info">
-                                            <div class="news__content-time">
+                                            <a class="news__content-time" href="#">
                                                 24 Feb 2017
-                                            </div>
-                                            <div class="news__content-comments">
+                                            </a>
+                                            <a class="news__content-comments" href="#">
                                                 45
-                                            </div>
-                                            <div class="news__content-watch">
+                                            </a>
+                                            <a class="news__content-watch" href="#">
                                                 345
-                                            </div>
+                                            </a>
                                         </div>
                                     </div>
-                                </div>
+                                </article >
 
-                                <div class="news__item">
+                                <article  class="news__item">
 
                                     <div class="news__content">
                                         <a href="">
@@ -1187,20 +1190,20 @@
                                             </div>
                                         </div>
                                         <div class="news__content-info">
-                                            <div class="news__content-time">
+                                            <a class="news__content-time" href="#">
                                                 24 Feb 2017
-                                            </div>
-                                            <div class="news__content-comments">
+                                            </a>
+                                            <a class="news__content-comments" href="#">
                                                 45
-                                            </div>
-                                            <div class="news__content-watch">
+                                            </a>
+                                            <a class="news__content-watch" href="#">
                                                 345
-                                            </div>
+                                            </a>
                                         </div>
                                     </div>
-                                </div>
+                                </article >
 
-                                <div class="news__item">
+                                <article  class="news__item">
 
                                     <div class="news__content">
                                         <a href="">
@@ -1217,18 +1220,18 @@
                                             </div>
                                         </div>
                                         <div class="news__content-info">
-                                            <div class="news__content-time">
+                                            <a class="news__content-time" href="#">
                                                 24 Feb 2017
-                                            </div>
-                                            <div class="news__content-comments">
+                                            </a>
+                                            <a class="news__content-comments" href="#">
                                                 45
-                                            </div>
-                                            <div class="news__content-watch">
+                                            </a>
+                                            <a class="news__content-watch" href="#">
                                                 345
-                                            </div>
+                                            </a>
                                         </div>
                                     </div>
-                                </div>
+                                </article >
                             </div>
                         </div>
                     </div>
@@ -1380,7 +1383,7 @@
                         </div>
                         <div class="footer__form-wraper">
                             <form class="footer__form">
-                                <input class="footer__form-input" type="text" placeholder="E-mail Address">
+                                <input class="footer__form-input" type="email" placeholder="E-mail Address">
                                 <button class="footer__form-btn" type="submit">submit</button>
                             </form>
                         </div>
